[project]
name = "tutorial"
version = "0.1.0"
description = "A small example package for tutorial purposes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "build==1.0.3",
    "numpy==1.26.2",
    "pre-commit==3.5.0",
    "pydantic==2.5.1",
    "pytest==7.4.3",
    "scikit-learn==1.3.2",
    "wheel==0.41.3",
]
